--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <p>My name is Reha Buğrahan Özel</p>
+    <p>My name is Reha Buğrahan Özel. Mahallenizin süper kahramanı.</p>
   </body>
 </html>
